<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">agender</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_game">Game</string>
  <string name="msg_kamu_berhasil_m">Kamu berhasil menembak 8/10 kalimat diskriminatif, nice work hero!</string>
  <string name="msg_what_is_gender">What is gender equality?</string>
  <string name="lbl_next">Next</string>
  <string name="lbl_hi_james">Hi, James!</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign up here</string>
  <string name="msg_confirm_passwor">Confirm password</string>
  <string name="lbl_equity">EQUITY</string>
  <string name="lbl2">&gt;</string>
  <string name="lbl_agender">Agender</string>
  <string name="lbl_skor_kamu">Skor kamu</string>
  <string name="lbl_home">Home</string>
  <string name="msg_create_your_acc">Create your account</string>
  <string name="msg_already_have_an">Already have an account? Log in here</string>
  <string name="msg_2_video_1_art">2 Video | 1 Artikel</string>
  <string name="msg_perubahan_sosia">Perubahan Sosial melalui Aksi Individu</string>
  <string name="msg_pengenalan_kese">Pengenalan Kesetaraan Gender</string>
  <string name="msg_materi_berikutn">Materi berikutnya</string>
  <string name="lbl_sign_in">Sign In</string>
  <string name="lbl_material">Material</string>
  <string name="lbl_2_5">2/5</string>
  <string name="lbl_50">50</string>
  <string name="lbl_kuis">Kuis</string>
  <string name="lbl_eren">Eren</string>
  <string name="lbl_812">812</string>
  <string name="lbl_kuis_pengenalan">Kuis Pengenalan</string>
  <string name="lbl_jawab">Jawab</string>
  <string name="msg_apa_yang_inigin">Apa yang inigin kamu cari?</string>
  <string name="msg_memahami_esensi">Memahami Esensi Kesetaraan Gender: Sebuah Pengantar</string>
  <string name="lbl_patriarki">PATRIARKI</string>
  <string name="msg_mengenali_keset">Mengenali kesetaraan gender</string>
  <string name="msg_akhir_akhir_ini">Akhir-akhir ini dilihat</string>
  <string name="lbl_game_pengenalan">Game Pengenalan</string>
  <string name="msg_mulailah_perjal">Mulailah perjalanan mengenali kesetaraan gender dan temukan inspirasi untuk berkontribusi dalam menciptakan masyarakat yang lebih adil.</string>
  <string name="msg_3_video_4_art">3 Video | 4 Artikel</string>
  <string name="msg_selamat_kamu_me">Selamat kamu melampaui target, lanjutin materi berikutnya ya!</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
  <string name="msg_pemisahan_tugas"> Pemisahan tugas dan pekerjaan berdasarkan jenis kelamin.</string>
  <string name="msg_pahami_dan_tera2">Pahami dan terapkan kesetaraan gender.</string>
  <string name="msg_or_sign_in_wit">-Or sign in with-</string>
  <string name="lbl_feminis">FEMINIS</string>
  <string name="msg_already_have_an2">Already have an account? </string>
  <string name="lbl_10_chapter">10 Chapter</string>
  <string name="lbl_log_in_here">Log in here</string>
  <string name="msg_keseteraan_gend">Keseteraan gender untuk memberikan hak yang setara</string>
  <string name="msg_pemberian_hak_h">Pemberian hak-hak yang sama kepada semua individu.</string>
  <string name="lbl_password">Password</string>
  <string name="msg_transformasi_bu">Transformasi Budaya: Kesetaraan Gender di Era Digital</string>
  <string name="lbl_forum">Forum</string>
  <string name="lbl_pengenalan">Pengenalan</string>
  <string name="lbl_shoot_the_word">SHOOT THE WORD!</string>
  <string name="msg_video_ini_mengg">Video ini menggali dalam konsep fundamental kesetaraan gender dan menyoroti mengapa isu ini sangat penting dalam membangun masyarakat yang adil dan berkelanjutan. Dengan merinci dampak kesetaraan gender dalam berbagai aspek kehidupan, video ini bertujuan untuk memberikan pemahaman mendalam tentang mengapa perjuangan untuk kesetaraan gender bukan hanya hak, tetapi juga kunci untuk kemajuan sosial dan ekonomi. Melalui wawancara dengan ahli, data statistik yang relevan, dan kisah-kisah kehidupan nyata, penonton akan memahami bagaimana ketidaksetaraan gender tidak hanya memengaruhi individu, tetapi juga merugikan masyarakat secara keseluruhan. Video ini mendorong refleksi dan tindakan, mengajak penonton untuk bersama-sama berkontribusi dalam menciptakan perubahan positif menuju kesetaraan gender.</string>
  <string name="lbl_4_chapter">4 Chapter</string>
  <string name="lbl_introduction">Introduction</string>
  <string name="msg_cara_menanggapi">Cara menanggapi org  patriarki dong?</string>
  <string name="msg_kuis_pengenala">KUIS  PENGENALAN </string>
  <string name="msg_kesenjangan_gen">Kesenjangan gender yang harus dipertahankan.</string>
  <string name="lbl_kembali">Kembali</string>
  <string name="lbl_materi">Materi</string>
  <string name="lbl_video_materi">Video materi</string>
  <string name="msg_apa_yang_dimaks">Apa yang dimaksud dengan kesetaraan gender?</string>
  <string name="msg_implementasi_ke">Implementasi kesetaraan gender</string>
  <string name="lbl_4_5">4.5</string>
  <string name="lbl_keadilan_gender">Keadilan gender</string>
  <string name="lbl_4_7">4.7</string>
  <string name="lbl_4_6">4.6</string>
  <string name="lbl_4_9">4.9</string>
  <string name="lbl_akumulasi_poin">Akumulasi poin</string>
  <string name="msg_kisah_inspirati">Kisah Inspiratif Wanita Kesetaraan Gender</string>
  <string name="lbl_10">10</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_akumulasi_skor">Akumulasi skor</string>
  <string name="lbl_profile">Profile</string>
  <string name="msg_pahami_dan_tera">Pahami dan terapkan!</string>
  <string name="msg_apa_itu_kesetar">Apa itu kesetaraan gender?</string>
  <string name="lbl">&lt;</string>
  <string name="msg_jadilah_pejuang">Jadilah pejuang kesetaraan!</string>
  <string name="lbl_skor_akhir">Skor Akhir</string>
  <string name="msg_mengapa_kesetar">Mengapa kesetaraan gender penting?</string>
  <string name="msg_5_video_2_art">5 Video | 2 Artikel</string>
  <string name="msg_login_to_your_a">Login to your account</string>
  <string name="lbl_email">Email</string>
  <string name="msg_what_do_you_wan">What do you want to know?</string>
  <string name="lbl_80">80</string>
  <string name="lbl_detail_materi">Detail materi</string>
  <string name="msg_diskriminasi_be">Diskriminasi berdasarkan jenis kelamin yang diterima secara positif.</string>
  <string name="msg_langkah_langkah">Langkah-langkah Praktis untuk Mendorong Kesetaraan Gender</string>
  <string name="msg_maaf_kamu_belum">Maaf kamu belum lulus. Ayo coba lagi, kamu pasti bisa  lebih dari ini!</string>
  <string name="lbl_coba_lagi">Coba Lagi</string>
  <string name="msg_apa_penerapan_k">Apa penerapan kesetaraan gender?</string>
  <string name="lbl_yakin">Yakin</string>
  <string name="msg_dampak_kesetara">Dampak Kesetaraan Gender dalam Dunia 
Pekerjaan</string>
  <string name="lbl_sign_up_here">Sign up here</string>
  <string name="msg_musnahkan_diksi">MUSNAHKAN DIKSI DISKRIMINATIF!</string>
  <string name="msg_hai_apakah_kam">Hai, apakah kamu yakin ingin mengerjakan kuis ini?</string>
  <string name="lbl_equality">EQUALITY</string>
  <string name="msg_pelajari_keseta">Pelajari kesetaraan gender</string>
  <string name="msg_artikel_ini_men">Artikel ini menyajikan pengantar mendalam terhadap konsep esensial kesetaraan gender, membawa pembaca pada perjalanan untuk memahami dasar-dasar hak asasi manusia ini. Melalui penjelasan yang jelas dan lugas, artikel ini menguraikan arti kesetaraan gender dan relevansinya dalam konteks global. Dari pembedahan perbedaan antara kesetaraan gender dan feminisme hingga pemahaman tentang peran budaya dan sejarah dalam membentuk pandangan kita tentang gender, artikel ini memberikan fondasi yang kokoh untuk pengertian yang lebih luas. Dengan menyajikan beberapa contoh kasus dan pencapaian kesetaraan gender, pembaca diundang untuk merenung dan mempertimbangkan peran masing-masing dalam mendukung perubahan positif. Artikel ini bukan hanya sebuah bacaan informatif, tetapi juga panggilan untuk refleksi dan aksi, mendorong kesadaran dan kontribusi individu dalam mencapai kesetaraan gender yang sejati.</string>
  <string name="msg_6_video_7_art">6 Video | 7 Artikel</string>
  <string name="msg_kesetaraan_gend">Kesetaraan gender</string>
  <string name="msg_10_menit_yang_l">10 menit yang lalu</string>
  <string name="msg_materi_diselesa">Materi diselesaikan</string>
  <string name="msg_hai_kamu_yakin">Hai, kamu yakin pengen main game ini?</string>
  <string name="msg_kondisi_di_mana">Kondisi di mana satu jenis kelamin mendominasi yang lain.</string>
  <string name="msg_platform_digita">Platform digital untuk mengenal kesetaraan gender</string>
  <string name="lbl_artikel_materi">Artikel materi</string>
  <string name="lbl_671">671</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="lbl_error">Error</string>
</resources>
